# clawdog-calculator-api

./: .gitignore  Dockerfile  Licence.txt  Makefile  README.md  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  smoke-prod.yml
api/: __init__.py  main.py  manifest_fidelity.py  prolog_client.py
api/lib/: __init__.py  advisory_boundary.py  rate_table_resolver.py
api/routes/: __init__.py  calculators.py  mcp.py  rates.py
api/schemas/: __init__.py  depreciation.py  invocation.py  manifest.py
api/services/: __init__.py  mcp_tool_registry.py  widget_url_resolver.py
deploy/: README.md  cloud-run.yaml
docs/: verification-kit.md
rate_tables/SBRM_RATE_TABLE/: PROVENANCE.md
rate_tables/SBRM_RATE_TABLE/fbt/fy2026/: deemed-depreciation-rates.md  gross-up-type-1.md  gross-up-type-2.md  in-house-benefit-cap.md  (+3 more)
scripts/: check_deploy_placeholders.py  smoke_prod.sh
scripts/hooks/: pre-push
tests/: conftest.py  test_advisory_boundary.py  test_chained_dv_schema.py  test_cors.py  test_depreciation_audit_smoke.py  test_input_model_registry_parity.py  test_livez_route.py  test_manifest_fidelity.py  test_mcp_tools_list.py  test_mcp_widget_resource.py  test_openapi_drift.py  test_phase3a_e2e.py  test_production_bundle.py  test_prolog_client_dispatch.py  test_route_engine_unavailable.py  test_wave_a_route_dispatch.py
tests/fixtures/: prolog_response_depreciation_audit_smoke.json  prolog_response_pr_d_case_5.json
tests/fixtures/sbrm_rate_table_depreciation_fy2026/: audit-variance-threshold.md  instant-asset-write-off-threshold.md
tests/fixtures/sbrm_rate_table_fy2026/: _FIXTURE_README.txt  benchmark-interest.md  days-in-year.md  deemed-depreciation-rates.md  fbt-rate.md  s8a-effective-from.md  s8a-lct-low-emission-threshold.md
tests/sidecars/: depreciation_engine_unavailable_response.json  ntaa_row_3_response.json
(+14 files in other folders)
