[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawdog-calculator-api"
version = "0.1.0a0"
description = "Calculator-Constellation REST API — Egress Interface for the LodgeiT calculator pool (Phase 3a)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "Licence.txt" }
authors = [
    { name = "LodgeiT Labs" },
]
keywords = [
    "lodgeit",
    "clawdog",
    "fbt",
    "calculator",
    "tax",
    "rest-api",
    "egress-interface",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "anyio>=4.2",
]

[project.urls]
Homepage = "https://github.com/lodgeit-labs/clawdog-calculator-api"
"Architecture canon (CLAWDOG/109)" = "https://github.com/futureWA/clawdog-brain/blob/master/GLOBAL_NOTES/CLAWDOG/109_CALCULATOR_CONSTELLATION.md"
"Outsource boundary canon (CLAWDOG/110)" = "https://github.com/futureWA/clawdog-brain/blob/master/GLOBAL_NOTES/CLAWDOG/110_OUTSOURCE_BOUNDARY_DISCIPLINE.md"

[tool.setuptools.packages.find]
include = ["api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI's Depends idiom
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
